--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "^6.7.3",
     "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^5.0.0",
+    "binary-collections": "^2.0.2",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
