--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "depcheck": "^1.4.7",
     "dotenv": "^16.3.1",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
@@ -70,6 +71,7 @@
     "lint-staged": "^14.0.1",
     "minimist": "^1.2.8",
     "node-sass": "^7.0.0",
+    "npm-check-updates": "^16.14.14",
     "postcss": "^8.4.30",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
@@ -125,5 +127,5 @@
     "hexo-post-parser": "https://github.com/dimaslanjaka/hexo-post-parser/raw/0f213ec/release/hexo-post-parser.tgz",
     "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/ff4b648/release/cross-spawn.tgz"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@4.0.2"
 }
