--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.4",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.4",
     "purgecss": "^5.0.0",
     "sass-loader": "^12.4.0",
     "sbg-utility": "^1.1.5",
@@ -94,18 +94,31 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.24",
+    "axios": "^1.5.1",
+    "axios-cache-interceptor": "^1.3.1",
+    "bluebird": "^3.7.2",
     "buffer": "^6.0.3",
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
+    "flowbite": "^1.6.6",
+    "flowbite-react": "^0.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "rsuite": "^5.40.0",
+    "safelinkify": "^1.2.2",
     "sort-by": "^1.2.0",
     "stream-browserify": "^3.0.0",
+    "turndown": "^7.1.2",
+    "tw-elements": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha1"
   },
   "engines": {
