--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wmi-page-monorepo",
-  "version": "3.0.0",
+  "name": "spring-frontend",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "private": true,
@@ -47,8 +47,8 @@
     "@types/node-sass": "^4.11.4",
     "@types/prettier": "^3",
     "@types/prop-types": "^15",
-    "@types/react": "^17",
-    "@types/react-dom": "^17",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@types/webpack-bundle-analyzer": "^4",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
@@ -65,7 +65,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fs-extra": "^11.1.1",
-    "git-command-helper": "^2.0.1",
+    "git-command-helper": "^2.0.2",
     "glob": "^10.3.10",
     "html-webpack-plugin": "^5.5.0",
     "lint-staged": "^14.0.1",
@@ -79,7 +79,7 @@
     "prettier": "^3.2.4",
     "purgecss": "^5.0.0",
     "sass-loader": "^12.4.0",
-    "sbg-utility": "^1.1.5",
+    "sbg-utility": "^1.1.6",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "through2": "^4.0.2",
@@ -87,10 +87,10 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.2.2",
     "upath": "^2.0.1",
-    "webpack": "^5.65.0",
+    "webpack": "^5.90.0",
     "webpack-bundle-analyzer": "^4.9.1",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
@@ -109,10 +109,10 @@
     "moment-timezone": "^0.5.43",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.21.3",
     "rsuite": "^5.40.0",
     "safelinkify": "^1.2.2",
     "sort-by": "^1.2.0",
@@ -129,9 +129,6 @@
     "jsdom": "^21",
     "@types/node": "^14",
     "deepmerge-ts": "^4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.15.0",
     "@types/hexo": "https://github.com/dimaslanjaka/hexo/raw/638a594/releases/hexo.tgz",
     "hexo-log": "https://github.com/dimaslanjaka/hexo/raw/638a594/releases/hexo-log.tgz",
     "hexo-util": "https://github.com/dimaslanjaka/hexo/raw/638a594/releases/hexo-util.tgz",
@@ -140,5 +137,5 @@
     "hexo-post-parser": "https://github.com/dimaslanjaka/hexo-post-parser/raw/0f213ec/release/hexo-post-parser.tgz",
     "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/ff4b648/release/cross-spawn.tgz"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@3.7.0"
 }
