--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.4",
     "prettier": "^3.2.4",
+    "process": "^0.11.10",
     "purgecss": "^5.0.0",
     "sass-loader": "^12.4.0",
     "sbg-utility": "^1.1.6",
