--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.5.0",
     "localforage": "^1.10.0",
-    "match-sorter": "^6.3.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "os-browserify": "^0.3.0",
@@ -116,9 +115,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "safelinkify": "^1.2.2",
-    "sort-by": "^1.2.0",
-    "stream-browserify": "^3.0.0",
-    "turndown": "^7.1.2"
+    "stream-browserify": "^3.0.0"
   },
   "engines": {
     "node": "^14"
