fixed config commonjs

--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/sortablejs": "^1.15.7",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -52,6 +54,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
+    "hexo": "^7.1.1",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
@@ -59,8 +62,11 @@
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "sass": "^1.70.0",
+    "sbg-utility": "^1.1.6",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
+    "upath": "^2.0.1",
     "vite": "^5.0.12",
     "vitest": "^1.2.2"
   },
