--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,8 +33,8 @@
   "terminal.integrated.defaultProfile.windows": "Command Prompt",
   "code-runner.clearPreviousOutput": true,
   "code-runner.executorMap": {
-    "javascript": "cross-env-shell NODE_ENV=development node -r dotenv/config --es-module-specifier-resolution=node",
-    "typescript": "cross-env-shell NODE_ENV=development node --experimental-specifier-resolution=node --loader ts-node/esm -r dotenv/config"
+    "javascript": "cross-env-shell NODE_ENV=development node -r dotenv/config --es-module-specifier-resolution=node --no-warnings",
+    "typescript": "cross-env-shell NODE_ENV=development node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm -r dotenv/config"
   },
   "code-runner.respectShebang": true,
   "code-runner.runInTerminal": true,
