--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "classnames": "^2.5.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "jquery-form-saver": "https://github.com/dimaslanjaka/jquery-form-saver#master",
     "react-apexcharts": "^1.4.1",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/google.accounts": "^0.0.14",
+    "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/sortablejs": "^1.15.7",
@@ -44,6 +47,7 @@
     "@typescript-eslint/parser": "^6.5.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "binary-collections": "^2.0.3",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.1",
