--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "format": "prettier --check --ignore-path .gitignore --write .",
     "lint": "eslint --ignore-path .gitignore .",
     "preview": "vite preview --host",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "postinstall": "node -r dotenv/config --es-module-specifier-resolution=node --no-warnings"
   },
   "engines": {
     "node": ">= 16",
@@ -75,54 +76,5 @@
     "vitest": "^1.2.2"
   },
   "private": true,
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "eslintConfig": {
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/strict",
-      "plugin:jsx-a11y/recommended",
-      "plugin:prettier/recommended",
-      "plugin:react/recommended",
-      "plugin:react-hooks/recommended",
-      "plugin:tailwindcss/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "project": "./tsconfig.json"
-    },
-    "root": true,
-    "rules": {
-      "@typescript-eslint/consistent-type-imports": "error",
-      "react/react-in-jsx-scope": "off",
-      "react/no-unescaped-entities": "off",
-      "tailwindcss/classnames-order": [
-        "error",
-        {
-          "callees": [
-            "classnames"
-          ],
-          "config": "tailwind.config.cjs"
-        }
-      ],
-      "tailwindcss/no-custom-classname": [
-        "error",
-        {
-          "config": "tailwind.config.cjs"
-        }
-      ]
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    }
-  },
   "packageManager": "yarn@3.8.0"
 }
