--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "flowbite-react": "^0.7.2",
     "jquery-form-saver": "https://github.com/dimaslanjaka/jquery-form-saver#master",
     "react-apexcharts": "^1.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-simple-keyboard": "^3.7.78",
+    "simple-keyboard": "^3.7.53"
   },
   "devDependencies": {
     "@types/google.accounts": "^0.0.14",
