--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
     "url": "https://github.com/themesberg/flowbite-react-admin-dashboard.git"
   },
   "scripts": {
-    "build": "yarn typecheck && vite build",
-    "dev": "vite --host",
-    "start": "vite --host",
+    "dev": "php -S 0.0.0.0:4000",
+    "start": "php -S 0.0.0.0:4000",
     "format": "prettier --check --ignore-path .gitignore --write .",
-    "lint": "eslint --ignore-path .gitignore .",
-    "preview": "vite preview --host",
-    "typecheck": "tsc",
-    "postinstall": "node -r dotenv/config --es-module-specifier-resolution=node --no-warnings _config.gen.cjs"
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "engines": {
     "node": ">= 16",
@@ -31,15 +27,9 @@
     "apexcharts": "^3.45.2",
     "axios": "^1.6.7",
     "axios-cache-interceptor": "^1.5.1",
-    "classnames": "^2.5.1",
     "deepmerge-ts": "4",
     "flowbite": "^2.2.1",
-    "flowbite-react": "^0.7.2",
-    "jquery-form-saver": "https://github.com/dimaslanjaka/jquery-form-saver#master",
-    "react-apexcharts": "^1.4.1",
-    "react-icons": "^5.0.1",
-    "react-simple-keyboard": "^3.7.78",
-    "simple-keyboard": "^3.7.53"
+    "jquery-form-saver": "https://github.com/dimaslanjaka/jquery-form-saver#master"
   },
   "devDependencies": {
     "@types/google.accounts": "^0.0.14",
@@ -61,7 +51,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
-    "hexo": "^7.1.1",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
