--- a/package.json
+++ b/package.json
@@ -32,14 +32,10 @@
     "jquery-form-saver": "https://github.com/dimaslanjaka/jquery-form-saver#master"
   },
   "devDependencies": {
-    "@types/google.accounts": "^0.0.14",
     "@types/node": "^20.11.16",
-    "@types/react": "^18.2.52",
-    "@types/react-dom": "^18.2.18",
     "@types/sortablejs": "^1.15.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "binary-collections": "^2.0.3",
     "cross-env": "^7.0.3",
@@ -51,20 +47,11 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
-    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0",
-    "sass": "^1.70.0",
     "sbg-utility": "^1.1.6",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "upath": "^2.0.1",
-    "vite": "^5.0.12",
-    "vitest": "^1.2.2"
+    "typescript": "^5.3.3"
   },
   "private": true,
   "packageManager": "yarn@3.8.0"
